# suda-core

./: .gitignore  Cargo.toml  LICENSE  README.md  download_datasets.py  pyproject.toml  pytest.ini
datasets/: README.md  download.py
src/: controller.rs  dataset.rs  forest.rs  lib.rs  node.rs  registry.rs  sample.rs  scan.rs  split.rs  streaming.rs  tree.rs
src/baselines/: limited_arf.py  river_models.py
src/data/: __init__.py  nids.py
src/experiments/: README_arf_comparison.md  __init__.py  arf_direct_comparison.py  budget_benchmark.py  buffer_size_sensitivity.py  feature_drift_benchmark.py  granularity_benchmark.py  paper_benchmark.py  paper_v2_benchmark.py  paper_v2_rerun.py  r1_grid_search.py  r3_influence_strategies.py  r4_what_diagnostic.py  selective_vs_fifo_benchmark.py  statistical_tests.py  unlearning_contribution_test.py  utils.py
src/metrics/: streaming.rs
src/models/: __init__.py  suda.py
suda-core/src/: controller.rs  dataset.rs  forest.rs  lib.rs  node.rs  registry.rs  scan.rs  split.rs  split_stats.rs  streaming.rs  tree.rs
suda-core/src/metrics/: mod.rs  streaming.rs
suda-core/tests/: integration_tests.rs
tests/: critical_correctness.rs  integration_tests.rs  lazy_resolve.rs  test_extreme_imbalance.py  test_nids_anoshift_loader.py  test_oob_influence.py  test_suda_predict_purity.py
